fixed overlapping overlay

--- a/static/assets/css/public/style.css
+++ b/static/assets/css/public/style.css
@@ -713,6 +713,10 @@ video {
   z-index: 50;
 }
 
+.-z-40 {
+  z-index: -40;
+}
+
 .m-0 {
   margin: 0px;
 }
